# Rust-web

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  docker-compose.yml  tailwind.config.js
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: api.rs  main.rs  routes.rs
frontend/: Cargo.toml
frontend/templates/: index.html
migrations/: 202310_create_orders_table.sql  202310_create_users_table.sql
python/: answers.json  main.py
src/: db.rs  docker.rs  lib.rs  main.rs  schema.rs
src/auth/: guards.rs  mod.rs
src/config/: routes.rs
src/controllers/: auth.rs  dashboard.rs  home.rs  mod.rs  pricing.rs  request.rs
src/error_handlers/: mod.rs
src/errors/: database.rs  general.rs  mod.rs  validation.rs
src/models/: mod.rs  order.rs  user.rs
src/repositories/: mod.rs  order.rs  user.rs
src/routes/: auth.rs  dashboard.rs  hello.rs  index.rs  mod.rs  request.rs
src/services/: mod.rs  order.rs  user.rs
static/css/: style.css
static/js/: main.js
templates/: base.html.hbs  error-404.html.hbs  error-500.html.hbs  hello.html.hbs  index.html.hbs
templates/auth/: login.html.hbs  profile.html.hbs  register.html.hbs  signup.html.hbs
templates/dashboard/: index.html.hbs  new_order.html.hbs  orders.html.hbs
templates/errors/: 404.html.hbs  500.html.hbs
templates/layouts/: base.html.hbs
templates/pages/: dashboard.html.hbs  index.html.hbs  new_order.html.hbs  orders.html.hbs  pricing.html.hbs  profile.html.hbs  request.html.hbs
templates/pages/auth/: login.html.hbs  profile.html.hbs  register.html.hbs  signup.html.hbs
templates/pages/dashboard/: index.html.hbs  new_order.html.hbs  orders.html.hbs
