[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.13"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]

[build-dependencies]
diesel_migrations = "2.0.0"
