[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
# Use a specific version of Diesel with explicitly enabled features
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
# Add the bundled feature to ensure SQLite is compiled correctly
libsqlite3-sys = { version = "0.22.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.10.0"
dotenv = "0.15.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]

[build-dependencies]
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }